# Proyecto-info2

./: Documento de espeficicación.docx  Link del Video Del Juego  README.md
Game/: CMakeLists.txt  main.cpp  score.txt
Game/Headers/: Asteroid.cpp  Asteroid.h  Enemy_1.cpp  Enemy_1.h  Spaceship.cpp  Spaceship.h
Game/Headers/Colision/: Collision.h
Game/Headers/List/: LinkedList.h
Game/imagenes_juego/explosion/: Explosion_gen_v1.piskel  explosion_gen_v3.piskel
Game/images/explosion/: Explosion_gen_v3_favorable.piskel  explosion_gen_v2.piskel
Proyecto-info2-master/: Documento de espeficicación.docx
Proyecto-info2-master/Game/Headers/: Asteroid.cpp  Asteroid.h  Spaceship.cpp
Proyecto-info2-master/Game/Headers/Colision/: Collision.cpp  Collision.h
Proyecto-info2-master/Game/Headers/List/: LinkedList.h
